Add tikv-client-java and cdc client

--- a/buildSrc/src/main/groovy/org.tiflink.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/org.tiflink.java-common-conventions.gradle
@@ -8,8 +8,8 @@ plugins {
 }
 
 repositories {
-    // Use JCenter for resolving dependencies.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
