--- a/client/build.gradle
+++ b/client/build.gradle
@@ -9,4 +9,5 @@ plugins {
 
 dependencies {
     implementation 'org.tikv:tikv-client-java:3.0.1'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 }
