Add flink subproject

--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ plugins {
 dependencies {
     implementation project(':utils')
     implementation project(':client')
+    implementation project(':flink')
 }
