--- a/client/build.gradle
+++ b/client/build.gradle
@@ -8,6 +8,6 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.tikv:tikv-client-java:3.0.1'
+    implementation 'org.tikv:tikv-client-java:4.0.0-SNAPSHOT'
     implementation 'org.slf4j:slf4j-api:1.7.30'
 }
