--- a/flink/build.gradle
+++ b/flink/build.gradle
@@ -10,9 +10,10 @@ dependencies {
     implementation project(':utils')
     implementation project(':client')
 
-    implementation 'org.tikv:tikv-client-java:3.0.1'
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
     api 'org.apache.flink:flink-streaming-java_2.12:1.12.0'
     api 'org.apache.flink:flink-table-api-java-bridge_2.12:1.12.0'
+
+    compile group: 'com.pingcap.tikv', name: 'tikv-client', version: '2.3.11'
 }
