--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(':utils')
     implementation project(':client')
     implementation project(':flink')
+    implementation project(':examples')
 }
