--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -18,7 +18,9 @@ dependencies {
 
     implementation 'org.apache.flink:flink-streaming-java_2.12:1.12.0'
     implementation 'org.apache.flink:flink-table-api-java-bridge_2.12:1.12.0'
+    implementation 'org.apache.flink:flink-table-planner-blink_2.12:1.12.0'
     implementation 'org.apache.flink:flink-clients_2.12:1.12.0'
+    implementation 'org.apache.flink:flink-runtime-web_2.12:1.12.0'
 }
 
 application {
