Fix bugs about GrpcCoordinator

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -32,5 +32,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.tikv.tiflink.server.Application'
+    mainClass = 'org.tikv.tiflink.TiFlinkExample'
 }
