Move client to client-java

--- a/flink/build.gradle
+++ b/flink/build.gradle
@@ -8,9 +8,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(':client')
-
-    implementation 'org.tikv:tikv-client-java:3.0.1'
+    implementation 'org.tikv:tikv-client-java:3.2.0-SNAPSHOT'
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
     implementation "com.google.guava:guava:30.1.1-jre"
