--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -9,13 +9,12 @@ plugins {
 }
 
 dependencies {
-    implementation project(':client')
     implementation project(':flink')
 
     implementation 'log4j:log4j:1.2.17'
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'org.slf4j:slf4j-log4j12:1.7.30'
-    implementation 'org.tikv:tikv-client-java:4.0.0-SNAPSHOT'
+    implementation "com.google.guava:guava:30.1.1-jre"
 
     implementation 'org.apache.flink:flink-streaming-java_2.12:1.12.0'
     implementation 'org.apache.flink:flink-table-api-java-bridge_2.12:1.12.0'
@@ -23,11 +22,7 @@ dependencies {
     implementation 'org.apache.flink:flink-clients_2.12:1.12.0'
     implementation 'org.apache.flink:flink-runtime-web_2.12:1.12.0'
 
-    implementation 'com.alibaba:fastjson:1.2.73'
-    implementation('org.springframework.boot:spring-boot-starter-web:2.4.2'){
-        exclude group: 'ch.qos.logback', module: 'logback-classic'
-    }
-
+    implementation 'org.tikv:tikv-client-java:3.2.0-SNAPSHOT'
 }
 
 application {
