--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.apache.flink:flink-clients_2.12:1.13.0'
     implementation 'org.apache.flink:flink-runtime-web_2.12:1.13.0'
 
+    implementation 'mysql:mysql-connector-java:8.0.26'
+
     implementation 'org.tikv:tikv-client-java:3.2.0-SNAPSHOT'
 }
 
